--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "dotenv": "^16.0.0",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0"
