--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0",
     "mobile-device-detect": "^0.4.3",
     "v-mask": "^2.3.0",
+    "v-money": "^0.8.1",
     "vue": "^2.6.14",
     "vue-mobile-detection": "^2.0.1",
     "vue-router": "^3.5.3",
